--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "./node_modules/.bin/babel src --out-dir lib",
     "start": "npm run-script build && npm run-script demo && ./node_modules/http-server/bin/http-server docs/ -o",
-    "demo": "cp index.html docs/index.html && cp -r lib docs && cp -r styles docs"
+    "demo": "./node_modules/gulp-cli/bin/gulp.js docs"
   },
   "keywords": [],
   "author": {
@@ -30,9 +30,9 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "gulp": "^3.9.1",
+    "gulp-cli": "^2.0.1",
+    "gulp-smoosher": "0.0.9",
     "http-server": "^0.11.1"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.0.0"
   }
 }
